[package]
name = "openrustmap-app"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1"
openrustmap-core = { path = "../openrustmap-core" }
openrustmap-plugin-radiobrowser = { path = "../openrustmap-plugin-radiobrowser" }

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "6"
