[package]
name = "openrustmap-plugin-radiobrowser"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1"
openrustmap-core = { path = "../openrustmap-core" }
serde = { version = "1", features = ["derive"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# For the real Radio-Browser HTTP calls in v1.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"
urlencoding = "2"
crossbeam-channel = "0.5"
cpal = "0.15"
symphonia = { version = "0.5", features = [
  "mp3", "flac", "ogg", "vorbis", "wav", "pcm", "aac", "isomp4",
] }
rtrb = "0.3"
